# riscv-sde

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  PROJECT_SETUP.MD  README.md  WORKSPACE.bazel  pyproject.toml  requirements.txt  run_simulation.py  run_stage0.sh  run_with_bazel.sh  setup.py  setup.sh
configs/: simple_core_test.yaml
design/hardware/rtl/cores/picorv32/: BUILD.bazel  core.json  core.v  testbench.v
design/hardware/rtl/cores/simple_core/: BUILD.bazel  core.json  simple_core.v
design/hardware/rtl/testbench/: BUILD.bazel  universal_tb.sv  universal_tb.sv.new
design/software/common/: profiling.h
design/software/crypto/: sha256.c
design/software/fft/: fft.c
design/software/hello-world/: BUILD.bazel  Cargo.toml  Makefile  generate_hex.csh  make_hex.py  memory.x  project.json  test_config.json
design/software/hello-world/.cargo/: config.toml
design/software/hello-world/src/: main.rs
design/software/hello-world/src/asm/: start.S
design/software/matrix_mult/: matrix_mult.c
docs/: BUILD.bazel  Makefile  PROJECT_SETUP.MD  build_docs.sh  conf.py  dependencies.md  fix_doc_warnings.py  index.md  pyproject.toml  requirements.txt  sphinx_build.py
docs/_build/doctrees/: README.doctree  dependencies.doctree  doc_improvements.doctree  environment.pickle  index.doctree  testing.doctree
docs/_build/doctrees/development/: ci_cd.doctree  contributing.doctree  testing.doctree
docs/_build/doctrees/getting_started/: installation.doctree  quickstart.doctree
docs/_build/doctrees/reference/: api.doctree  benchmarks.doctree  cores.doctree  tools.doctree
docs/_build/doctrees/user_guide/: bazel_workflows.doctree  configuration.doctree  project_structure.doctree  workflows.doctree
docs/_build/html/: .buildinfo  README.html  dependencies.html  doc_improvements.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  testing.html
docs/_build/html/_sources/: README.md.txt  doc_improvements.md.txt  index.md.txt  testing.md.txt
docs/_build/html/_sources/development/: ci_cd.md.txt  testing.md.txt
docs/_build/html/_sources/getting_started/: installation.md.txt  quickstart.md.txt
docs/_build/html/_sources/reference/: benchmarks.md.txt  cores.md.txt
docs/_build/html/_sources/user_guide/: project_structure.md.txt  workflows.md.txt
docs/_build/html/_static/: architecture_diagram.dot
docs/_build/html/development/: ci_cd.html  contributing.html  testing.html
docs/_build/html/getting_started/: installation.html  quickstart.html
docs/_build/html/reference/: api.html  benchmarks.html  cores.html  tools.html
docs/_build/html/user_guide/: bazel_workflows.html  configuration.html  project_structure.html  workflows.html
docs/_ext/: mermaid_lexer.py
docs/development/: ci_cd.md  contributing.md
docs/reference/: api.md  benchmarks.md  tools.md
docs/user_guide/: bazel_workflows.md  configuration.md  workflows.md
flows/: BUILD.bazel  analysis_flow.py  main_study_flow.py  simulation_flow.py  software_flow.py  synthesis_flow.py
flows/utils/: logging.py
infrastructure/kubernetes/: job.yaml
simulations/: BUILD.bazel
simulations/scripts/: run_picorv32_simulation.sh  run_simple_core_flow.py  run_simple_core_simulation.sh  run_simulations.py
tests/: README.md  conftest.py  pytest.ini  test_dependencies.py
validate/simulations/: BUILD.bazel
validate/tests/: conftest.py  test_basic.py  test_build.py  test_dependencies.py  test_setup.py
validate/tools/: __init__.py  config.py  pytest.ini  regression.py
