# Root BUILD.bazel file for RISC-V PPA Study

load("@rules_python//python:defs.bzl", "py_test", "py_binary")

# Stage 0: Environment and Infrastructure Verification
py_test(
    name = "verify_environment",
    srcs = ["validate/tests/test_dependencies.py"],
    main = "validate/tests/test_dependencies.py",
    data = [
        "pyproject.toml",
    ] + glob(["build/flows/*.py", "build/flows/utils/*.py"], allow_empty = True),
    tags = [
        "stage0",
        "verification",
        "environment", 
        "manual",  # Don't run by default with bazel test //...
    ],
    size = "small",
)

# Setup command - equivalent to setup.sh
py_binary(
    name = "setup",
    srcs = ["build/scripts/setup.py"],
    data = [
        "pyproject.toml",
    ],
    main = "build/scripts/setup.py",
    tags = ["setup", "manual"],
)

# Helper rule to group all flow files
filegroup(
    name = "flow_files",
    srcs = glob([
        "build/flows/*.py",
        "build/configs/**/*",
    ], allow_empty = True),
    visibility = ["//visibility:public"],
)