load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

module(
    name = "risc_v_ppa_study",
    version = "0.1.0",
)

# Bazel module dependencies
bazel_dep(name = "rules_python", version = "0.29.0")
bazel_dep(name = "rules_cc", version = "0.0.9")

# Python dependencies for workflows
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    name = "python3_11",
    python_version = "3.11",
)
use_repo(python, "python3_11_toolchain")

# Register pip dependencies
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    name = "pip_deps",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip_deps")
