module(
    name = "risc_v_ppa_study",
    version = "0.1.0",
)

# Bazel module dependencies
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_python", version = "0.40.0")

# Python toolchain setup - no dependency management, just toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.10")
