# BUILD file for simulation targets
"""
This BUILD file defines targets for running simulations of RISC-V cores.
"""

load("@rules_python//python:defs.bzl", "py_binary")

# Unified Simulation Script
py_binary(
    name = "run_simulations",
    srcs = ["scripts/run_simulations.py"],
    main = "scripts/run_simulations.py",
    data = [
        "//design/hardware/rtl/cores/simple_core:simple_core_rtl",
        "//design/hardware/rtl/cores/picorv32:picorv32_rtl",
        "//design/hardware/rtl/cores/picorv32:picorv32_adapter",
        "//design/hardware/rtl/testbench:universal_testbench",
        "//design/software/hello-world:executable",
    ],
    visibility = ["//visibility:public"],
)

# Simple Core Simulation (using unified script)
py_binary(
    name = "simple_core_simulation",
    srcs = ["scripts/run_simulations.py"],
    main = "scripts/run_simulations.py",
    args = ["--core=simple_core"],
    data = [
        "//design/hardware/rtl/cores/simple_core:simple_core_rtl",
        "//design/software/hello-world:executable",
    ],
    visibility = ["//visibility:public"],
)

# PicoRV32 Simulation (using unified script)
py_binary(
    name = "picorv32_simulation",
    srcs = ["scripts/run_simulations.py"],
    main = "scripts/run_simulations.py",
    args = ["--core=picorv32"],
    data = [
        "//design/hardware/rtl/cores/picorv32:picorv32_rtl",
        "//design/hardware/rtl/cores/picorv32:picorv32_adapter",
        "//design/hardware/rtl/testbench:universal_testbench",
        "//design/software/hello-world:executable",
    ],
    visibility = ["//visibility:public"],
)

# Simple Core Flow
py_binary(
    name = "simple_core_flow",
    srcs = ["scripts/run_simple_core_flow.py"],
    args = [
        "--config=simple_core_test",
        "--flow=software,simulation",
    ],
    data = [
        "//build/configs:simple_core_test",
        "//design/hardware/rtl/cores/simple_core:simple_core_rtl",
        "//design/software/hello-world:executable",
    ],
    deps = [
        "//build/flows:software_flow",
        "//build/flows:simulation_flow",
        "//build/flows:utils",
    ],
    visibility = ["//visibility:public"],
)
